--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@rive-app/react-canvas": "^3.0.38",
+    "@sei-js/core": "^1.3.2",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.9",
     "@tanstack/react-table": "^8.7.9",
     "ahooks": "^3.7.4",
+    "axios": "^1.3.6",
     "chain-registry": "^1.6.0",
     "chakra-react-select": "^4.4.3",
     "dayjs": "^1.11.7",
