--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nivo/line": "^0.80.0",
     "@rive-app/react-canvas": "^3.0.38",
     "@sei-js/core": "^1.3.2",
+    "@sei-js/react": "^1.2.3",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.9",
     "@tanstack/react-table": "^8.7.9",
