--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@chakra-ui/react": "2.4.3",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@cosmjs/encoding": "^0.29.5",
+    "@cosmjs/launchpad": "^0.27.1",
     "@cosmjs/math": "^0.29.5",
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.29.5",
